    when using: mvn clean install -P on-jdk-9-plus
- CI: Fail build on warning?!
- What is the deal with DJoint PARAM vs PARAM_N?
  ODE doesn´t have PARAM_N (e.g. dParamBounce1)! -> ode4j shouldn´;t have them either...
  Remove (deprecate) and replace with PARAM, or at least document what is goigh on!

--> See TODO.txt

Check:
- Demo -> Test?  E.g. DemoI? DemoSpace(-Stress)? DemoStep? ....


0.5.0 (unreleased)
=====
- Added linter and fixed some lint. [#105](https://github.com/tzaeschke/ode4j/pull/105)
- Cleaned up Junit 3 style tests. [#104](https://github.com/tzaeschke/ode4j/pull/104)
- Moved tests into core/core-cpp. [#103](https://github.com/tzaeschke/ode4j/pull/103)
- Cleaned up unit test output. [#102](https://github.com/tzaeschke/ode4j/pull/102)
- Fix maven warnings of type "Use Import/Export Package directive -split-package [...]"
  [#101](https://github.com/tzaeschke/ode4j/pull/101)
- Port updates until 0.16.3. [#100](https://github.com/tzaeschke/ode4j/pull/100)
- Port updates until 0.16.2.
  This includes some libCCD updates missing fro the 0.15.1 update.
  This excludes improved solution finders with anything from *Cooperative* and ThreadedEquationSolverLDLT*.
  [#97](https://github.com/tzaeschke/ode4j/pull/97)
- Added GutHub Actions CI builds for Java 8 and 9. [#95](https://github.com/tzaeschke/ode4j/pull/95)
- Added default logger for demos and tests. [#94](https://github.com/tzaeschke/ode4j/pull/94)
- Added Android API compliance checker, now for API level 24 (the lowest that ode4j passed without changes)
  [#93](https://github.com/tzaeschke/ode4j/pull/93)
- Updated maven dependencies [#92](https://github.com/tzaeschke/ode4j/pull/92)
- Test that internal assertions did not throw Exceptions. This was fixed as part of #86.
  [#74](https://github.com/tzaeschke/ode4j/issues/74)
- Fixes to LWJGL 3.0 [#91](https://github.com/tzaeschke/ode4j/pull/91)
- Moved to LWJGL 3.0 [#89](https://github.com/tzaeschke/ode4j/issues/89)