@@ -866,7 +866,7 @@ public abstract class OdeHelper {
 	 * Utility function.
 	 * @param body1 A body to check.
 	 * @param body2 A body to check.
-	 * @param jointType is a set of subclasses of DJoint.
+	 * @param jointTypes is a set of subclasses of DJoint.
 	 * This is useful for deciding whether to add contact joints between two bodies:
 	 * if they are already connected by non-contact joints then it may not be
 	 * appropriate to add contacts, however it is okay to add more contact between-
@@ -876,8 +876,8 @@ public abstract class OdeHelper {
 	 */
  	@SafeVarargs
 	public static boolean areConnectedExcluding (DBody body1, DBody body2,
-												 Class<? extends DJoint> ... jointType) {
-        return ODE._dAreConnectedExcluding(body1, body2, jointType);
+												 Class<? extends DJoint> ... jointTypes) {
+        return ODE._dAreConnectedExcluding(body1, body2, jointTypes);
     }
 	/**
 	 * Utility function.
@@ -894,7 +894,7 @@ public abstract class OdeHelper {
  	@SuppressWarnings("unchecked")
 	public static boolean areConnectedExcluding (DBody body1, DBody body2, 
             Class<? extends DJoint> jointType) {
-        return ODE._dAreConnectedExcluding(body1, body2, new Class[]{jointType});
+        return ODE._dAreConnectedExcluding(body1, body2, jointType);
     }
 	
 	
