@@ -331,8 +331,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					<compilerArgument>-Xlint:unchecked</compilerArgument>
-					<compilerArgument>-Xlint:deprecation</compilerArgument>
+					<compilerArgument>-Xlint</compilerArgument>
 				</configuration>
 			</plugin>
 
